--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
                 <div class="col-12 col-sm align-self-center">
                     <img src="./img/logo.png" class="img-fluid">
                 </div>
+                <div class="col-12 col-sm align-self-center">
+                    <a class="btn btn-warning btn-block " href="#reservetable" role="button">Reserve a Table</a>
+                </div>
             </div>
         </div>
     </header>
@@ -97,6 +100,64 @@
             </div>
         </div>
     </div>
+    <div class="row row-content justify-content-center">
+        <div class="col col-sm-8 align-self-center">
+            <div class="card">
+                <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                <div class="card-block container">
+                    <form id="reservetable">
+                        <div class="form-group row align-items-center ">
+                            <label class="col-12 col-sm-2 col-form-label">Number of Guest</label>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" id="one" name="number" value="option1">
+                                <label class="col-form-label" for="one">1</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" id="two" name="number" value="option2">
+                                <label class="col-form-label" for="two">2</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" id="three" name="number" value="option3">
+                                <label class="col-form-label" for="three">3</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" id="four" name="number" value="option4">
+                                <label class="col-form-label" for="four">4</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" id="five" name="number" value="option5">
+                                <label class="col-form-label" for="five">5</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" id="six" name="number" value="option6s">
+                                <label class="col-form-label" for="six">6</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group row container">
+                        <label class="col-12 col-md-2 col-sm-2 col-form-label" for="date-time">Date and Time</label>
+                        <div class="col-12 col-md-4">
+                            <input type="date" class="form-control" id="date"
+                            name="date" placeholder="Date">
+                        </div>
+                        <div class="col-12 col-md-4 col-sm-4">
+                            <input type="time" class="form-control" id="time"
+                            name="time" placeholder="Time">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class=" col-md-10 offset-sm-2">
+                            <button type="submit" class="btn btn-primary">
+                                Reserve
+                            </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
     <footer class="footer">
         <div class="container">
