--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
      <meta http-equiv="x-ua-compatible" content="ie=edge">
  
-     <!-- Bootstrap CSS -->
-     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
-     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
-     <link rel="stylesheet" href="css/styles.css">
+	 <!-- Bootstrap CSS -->
+	  <!-- build:css css/main.css -->
+	  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+	  <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+	  <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
+	  <link href="css/styles.css" rel="stylesheet">
+	  <!-- endbuild -->
 </head>
 
 <body>
@@ -223,14 +225,9 @@
 					<a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
 						<span class="carousel-control-next-icon"></span>
 					</a>
-					<div class="btn-group" id="carouselButton">
-						<button class="btn btn-danger btn-sm" id="carousel-pause">
-							<span class="fa fa-pause"></span>
-						</button>
-						<button class="btn btn-danger btn-sm" id="carousel-play">
-							<span class="fa fa-play"></span>
-						</button>
-					</div>
+					<button class="btn btn-danger btn-sm" id="carouselButton">
+						<span class="fa fa-pause"></span>
+					</button>
 				</div>
 			</div>
 		</div>
@@ -338,20 +335,12 @@
 	</footer>
 
 	<!-- jQuery first, then Tether, then Bootstrap JS. -->
-	<script src="node_modules/jquery/dist/jquery.min.js"></script>
-	<script src="node_modules/tether/dist/js/tether.min.js"></script>
-	<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-	<script>
-        $(document).ready(function(){
-            $("#mycarousel").carousel( { interval: 2000 } );
-            $("#carousel-pause").click(function(){
-                $("#mycarousel").carousel('pause');
-            });
-            $("#carousel-play").click(function(){
-                $("#mycarousel").carousel('cycle');
-            });
-        });
-    </script>
+	 <!-- build:js js/main.js -->
+	 <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+	 <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+	 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+	 <script src="js/scripts.js"></script>
+	 <!-- endbuild -->
 </body>
 
 </html>
